<resources>
    <string name="app_name">Task2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_menu">main</string>
    <string name="settings_menu">settings</string>
    <string name="profile_menu">profile</string>
    <string name="games_menu">games</string>
    <string name="videos_menu">videos</string>
</resources>